--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Yarr RSS Reader</string>
+    <string name="app_name">AARR RSS Reader</string>
 </resources>
